--- a/DESKTOP/css/style.css
+++ b/DESKTOP/css/style.css
@@ -45,8 +45,8 @@ body{
 }
 
 body a:link{
-    color: black;
-    -webkit-text-fill-color: black;
+    color: white;
+    -webkit-text-fill-color: white;
     font-weight: bold;
     text-decoration:none;
 }
