--- a/MOBILE/css/style.css
+++ b/MOBILE/css/style.css
@@ -40,7 +40,7 @@ body{
     color: white;
 }
 body a:link{
-    color: black;
+    color: white;
     font-weight: bold;
     text-decoration:none;
 }
